--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet"/>
-    <title>Shortly</title>
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
+    <title>Shortly</title>
 </head>
 <body>
     <nav class="relative container mx-auto p-6">
@@ -78,7 +78,7 @@
         </div>
     </section>
     <section
-        d="shorten"
+        id="shorten"
         class="relative bg-gray-100"
     >
         <div class="max-w-4xl mx-auto p-6">
@@ -95,6 +95,14 @@
                 <button class="px-10 py-3 bg-cyan text-white rounded-lg hover:bg-cyanLight focus:outline-none">
                     Shorten it!
                 </button>
+                <div
+                    id="err-msg"
+                    class="absolute left-10 bottom-3 text-red text-sm italic"
+                ></div>
+                <div
+                    id="success-msg"
+                    class="absolute left-10 bottom-3 text-green-300 text-sm italic"
+                ></div>
             </form>
             <div class="flex flex-col items-center justify-between mt-6 p-6 w-full bg-white rounded-lg md:flex-row">
                 <p class="text-veryDarkViolet font-bold text-center md:text-left">
@@ -137,5 +145,162 @@
             </div>
         </div>
     </section>
+
+    <section
+        id="statistics"
+        class="bg-gray-100"
+    >
+        <div class="container mx-auto py-24 px-3 text-center">
+            <h2 class="mb-6 text-4xl font-bold">
+                Advanced Statistics
+            </h2>
+            <p class="max-w-xs mx-auto text-gray-400 md:max-w-md">
+                Track how your links are performing across the web with our advanced statistics dashboard.
+            </p>
+        </div>
+    </section>
+
+    <section
+        id="features"
+        class="pb-32 bg-gray-100"
+    >
+        <div class="relative container flex flex-col items-start px-6 mx-auto md:flex-row md:space-x-7">
+          
+            <div class="hidden absolute top-24 w-10/12 left-16 h-3 bg-cyan md:block"></div>
+            <div class="absolute w-2 left-1/2 h-full -ml-1 bg-cyan md:hidden"></div>
+  
+            <div class="relative flex flex-col p-6 space-y-6 bg-white rounded-lg md:w-1/3">
+                <div class="absolute -ml-10 left-1/2 -top-10 md:left-16">
+                    <div class="flex items-center justify-center w-20 h-20 p-4 rounded-full bg-veryDarkViolet">
+                        <img
+                            src="images/icon-brand-recognition.svg"
+                            alt=""
+                        />
+                    </div>
+                </div>
+                <h5 class="pt-6 text-xl font-bold text-center capitalize md:text-left">
+                    Brand Recognition
+                </h5>
+                <p class="text-center text-gray-400 md:text-left">
+                    Boost your brand recognition with each click. Generic links don't mean a thing. Branded links help instil confidence in your content.
+                </p>
+            </div>
+  
+            <div class="relative flex flex-col mt-24 p-6 space-y-6 bg-white rounded-lg md:mt-8 md:w-1/3">
+                <div class="absolute -ml-10 left-1/2 -top-10 md:left-16">
+                    <div class="flex items-center justify-center w-20 h-20 p-4 rounded-full bg-veryDarkViolet">
+                        <img src="images/icon-detailed-records.svg" alt="" />
+                    </div>
+                </div>
+                <h5 class="pt-6 text-xl font-bold text-center capitalize md:text-left">
+                    Detailed records
+                </h5>
+                <p class="text-center text-gray-400 md:text-left">
+                    Gain insights into who is clicking your links. Knowing when and where people engage with your content helps inform better decisions.
+                </p>
+            </div>
+  
+            <div class="relative flex flex-col mt-24 p-6 space-y-6 bg-white rounded-lg md:mt-16 md:w-1/3">
+                <div class="absolute -ml-10 left-1/2 -top-10 md:left-16">
+                    <div class="flex items-center justify-center w-20 h-20 p-4 rounded-full bg-veryDarkViolet">
+                        <img src="images/icon-fully-customizable.svg" alt="" />
+                    </div>
+                </div>
+                <h5 class="pt-6 text-xl font-bold text-center capitalize md:text-left">
+                    Fully customizable
+                </h5>
+                <p class="text-center text-gray-400 md:text-left">
+                    Improve brand awareness and content discoverability through customizable links, supercharging audience engagement.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section
+        id="getstarted"
+        class="bg-darkViolet"
+    >
+        <div class="flex flex-col gap-6 mx-auto py-24 px-2 text-center">
+            <h5 class="text-4xl text-white font-bold">
+                Boost your links today
+            </h5>
+            <button class="mx-auto px-10 py-5 bg-cyan text-2xl text-white font-bold rounded-full hover:bg-cyanLight focus:outline-none md:text-base md:py-3">
+                Get Started
+            </button>
+        </div>
+    </section>
+
+    <footer class="bg-veryDarkViolet">
+        <div class="container flex flex-col items-center justify-between mx-auto space-y-16 py-16 md:flex-row md:space-y-0 md:items-start">
+            <img src="/images/logo.svg" alt="">
+            <div class="flex flex-col space-y-16 md:space-x-20 md:flex-row md:space-y-0">
+                <div class="flex flex-col items-center w-full md:items-start">
+                    <h6 class="mb-5 text-white font-bold">
+                        Features
+                    </h6>
+                    <div class="flex flex-col items-center space-y-3 text-grayishViolet md:items-start">
+                        <a href="" class="hover:text-cyan">
+                            Link Shortening
+                        </a>
+                        <a href="" class="hover:text-cyan">
+                            Branded Links
+                        </a>
+                        <a href="" class="hover:text-cyan">
+                            Analytics
+                        </a>
+                    </div>
+                </div>
+                <div class="flex flex-col items-center w-full md:items-start">
+                    <h6 class="mb-5 text-white font-bold">
+                        Resources
+                    </h6>
+                    <div class="flex flex-col items-center space-y-3 text-grayishViolet md:items-start">
+                        <a href="" class="hover:text-cyan">
+                            Blog
+                        </a>
+                        <a href="" class="hover:text-cyan">
+                            Developers
+                        </a>
+                        <a href="" class="hover:text-cyan">
+                            Support
+                        </a>
+                    </div>
+                </div>
+                <div class="flex flex-col items-center w-full md:items-start">
+                    <h6 class="mb-5 text-white font-bold">
+                        Company
+                    </h6>
+                    <div class="flex flex-col items-center space-y-3 text-grayishViolet md:items-start">
+                        <a href="" class="hover:text-cyan">
+                            About
+                        </a>
+                        <a href="" class="hover:text-cyan">
+                            Our Team
+                        </a>
+                        <a href="" class="hover:text-cyan">
+                            Careers
+                        </a>
+                        <a href="" class="hover:text-cyan">
+                            Contact
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="flex gap-6">
+                <a href="">
+                    <img src="/images/icon-facebook.svg" alt="" class="ficon"/>
+                </a>
+                <a href="">
+                    <img src="/images/icon-twitter.svg" alt="" class="ficon"/>
+                </a>
+                <a href="">
+                    <img src="/images/icon-pinterest.svg" alt="" class="ficon"/>
+                </a>
+                <a href="">
+                    <img src="/images/icon-instagram.svg" alt="" class="ficon"/>
+                </a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
