--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" defer></script>
     <title>Shortly</title>
 </head>
 <body>
@@ -48,6 +47,30 @@
                     class="px-8 py-3 bg-cyan text-white rounded-full hover:opacity-70">
                         Sign Up
                 </a>
+            </div>
+
+            <button
+                id="menu-btn"
+                class="block hamburger lg:hidden focus:outline-none"
+                type="button"
+            >
+                <span class="hamburger-top"></span>
+                <span class="hamburger-middle"></span>
+                <span class="hamburger-bottom"></span>
+            </button>
+
+            <div id="menu" class="absolute hidden left-6 right-6 top-20 flex p-6 bg-darkViolet rounded-lg z-100">
+                <div class="flex flex-col items-center justify-center space-y-6 w-full text-white text-center font-bold">
+                    <a href="">Features</a>
+                    <a href="">Pricing</a>
+                    <a href="">Resources</a>
+                    <a href="" class="w-full pt-6 border-t border-gray-400">Login</a>
+                    <a
+                        href=""
+                        class="w-full py-3 bg-cyan text-white rounded-full hover:opacity-70">
+                            Sign Up
+                    </a>
+                </div>
             </div>
         </div>
     </nav>
@@ -302,5 +325,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="js/script.js" defer></script>
 </body>
 </html>
