--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <span class="hamburger-bottom"></span>
             </button>
 
-            <div id="menu" class="absolute hidden left-6 right-6 top-20 flex p-6 bg-darkViolet rounded-lg z-100">
+            <div id="menu" class="absolute hidden left-6 right-6 top-20 p-6 bg-darkViolet rounded-lg z-100">
                 <div class="flex flex-col items-center justify-center space-y-6 w-full text-white text-center font-bold">
                     <a href="">Features</a>
                     <a href="">Pricing</a>
