--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="flex items-center justify-between">
             <div class="flex items-center gap-20">
                 <img
-                    src="../images/logo.svg"
+                    src="images/logo.svg"
                     alt=""
                 />
                 <div class="hidden text-grayishViolet font-bold lg:flex gap-8">
