--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
             <div class="mb-24 mx-auto md:w-180 lg:w-1/2 lg:mb-0">
                 <img
-                    src="/images/illustration-working.svg"
+                    src="images/illustration-working.svg"
                     alt=""
                 />
             </div>
@@ -264,7 +264,7 @@
 
     <footer class="bg-veryDarkViolet">
         <div class="container flex flex-col items-center justify-between mx-auto space-y-16 py-16 md:flex-row md:space-y-0 md:items-start">
-            <img src="/images/logo.svg" alt="">
+            <img src="images/logo.svg" alt="">
             <div class="flex flex-col space-y-16 md:space-x-20 md:flex-row md:space-y-0">
                 <div class="flex flex-col items-center w-full md:items-start">
                     <h6 class="mb-5 text-white font-bold">
@@ -320,16 +320,16 @@
             </div>
             <div class="flex gap-6">
                 <a href="">
-                    <img src="/images/icon-facebook.svg" alt="" class="ficon"/>
+                    <img src="images/icon-facebook.svg" alt="" class="ficon"/>
                 </a>
                 <a href="">
-                    <img src="/images/icon-twitter.svg" alt="" class="ficon"/>
+                    <img src="images/icon-twitter.svg" alt="" class="ficon"/>
                 </a>
                 <a href="">
-                    <img src="/images/icon-pinterest.svg" alt="" class="ficon"/>
+                    <img src="images/icon-pinterest.svg" alt="" class="ficon"/>
                 </a>
                 <a href="">
-                    <img src="/images/icon-instagram.svg" alt="" class="ficon"/>
+                    <img src="images/icon-instagram.svg" alt="" class="ficon"/>
                 </a>
             </div>
         </div>
